--- a/content/themes/vignette/partials/excerpts.hbs
+++ b/content/themes/vignette/partials/excerpts.hbs
@@ -5,6 +5,7 @@
                 <a href="{{url}}">
                     <h1>{{title}}</h1>
                 </a>
+                <p>{{date published_at format="MMMM DD, YYYY"}}</p>
                 <p>{{excerpt words="25"}}&hellip;
 
                   <span class = "read-more "> <a href="{{url}}">繼續閱讀</a>
